--- a/ArgoDiffusion/scripts/configuration.json
+++ b/ArgoDiffusion/scripts/configuration.json
@@ -1,21 +1,21 @@
 {
-	"input_folder": "/home/alogo/workspace/dockerfiles/ArgoDiffusion/data_argo/",
-	"metadata_file": "/home/alogo/workspace/dockerfiles/ArgoDiffusion/scripts/ar_bigmetadata.json",
-	"output_file": "/home/alogo/workspace/dockerfiles/ArgoDiffusion/data_argo/data_argo.txt",
-	"bounding_box": {
-		"geospatial_lat_min": 0, 
-		"geospatial_lat_max": 0,
-		"geospatial_lon_min": 0,
-		"geospatial_lon_max": 0
-	},
-	"time_range": {
+        "input_folder": "/mnt/data/data_argo/",
+        "metadata_file": "/home/vm_user/dockerfiles/ArgoDiffusion/scripts/ar_bigmetadata.json",
+        "output_file": "/mnt/data/data_argo.txt",
+        "bounding_box":{          
+                "geospatial_lat_min": 0,
+                "geospatial_lat_max": 0,
+                "geospatial_lon_min": 0,
+                "geospatial_lon_max": 0
+        },
+        "time_range": {
 
-		"time_coverage_start": "1999-01-01T00:00:19Z",
-		"time_coverage_end": "1999-01-01T00:00:19Z"
-	},
-	"parameters": [9],
-	"subscription_id": "1",
-	"subscription_user_id": "2",
-	"subscription_date": "2017-04-10T13:28:06Z",
-	"end_subscription_date": "2018-04-10T13:28:06Z"
+                "time_coverage_start": "1999-01-01T00:00:19Z",
+                "time_coverage_end": "1999-01-01T00:00:19Z"
+        },
+        "parameters": [9],
+        "subscription_id": "1",
+        "subscription_user_id": "2",
+        "subscription_date": "2017-04-10T13:28:06Z",
+        "end_subscription_date": "2018-04-10T13:28:06Z"
 }
