--- a/ArgoDiffusion/scripts/pacific.conf
+++ b/ArgoDiffusion/scripts/pacific.conf
@@ -10,3 +10,5 @@ LON_START=$((MIN_LON+1))
 DATE=1999-01-01T00:00:19Z
 MAX_DATE=2017-04-13T00:07:18Z
 MAX_DATE_SECONDS=`date -d "$MAX_DATE" +%s`
+
+KEY_PATH=~/Downloads/ssh_egi/id_rsa.1
