copy conf file before executing

--- a/ArgoDiffusion/scripts/med.conf
+++ b/ArgoDiffusion/scripts/med.conf
@@ -11,5 +11,5 @@ DATE=1999-01-01T00:00:19Z
 MAX_DATE=2017-04-13T00:07:18Z
 MAX_DATE_SECONDS=`date -d "$MAX_DATE" +%s`
 
-KEY_PATH=~/Downloads/ssh_egi/id_rsa.1
-SSH_FILE=~/Downloads/ssh
+KEY_PATH=/mnt/data/source/id_rsa
+SSH_FILE=/mnt/data/source/ssh
