--- a/ArgoDiffusion/scripts/all.conf
+++ b/ArgoDiffusion/scripts/all.conf
@@ -11,5 +11,5 @@ DATE=1999-01-01T10:36:19Z
 MAX_DATE=2020-01-05T00:00:00Z
 MAX_DATE_SECONDS=`date -d "$MAX_DATE" +%s`
 
-KEY_PATH=/mnt/data/source/id_rsa
+KEY_PATH=~/.ssh/id_rsa #/mnt/data/source/id_rsa
 SSH_FILE=/mnt/data/source/ssh
