--- a/ArgoDiffusion/scripts/med.conf
+++ b/ArgoDiffusion/scripts/med.conf
@@ -12,4 +12,4 @@ MAX_DATE=2020-04-13T00:07:18Z
 MAX_DATE_SECONDS=`date -d "$MAX_DATE" +%s`
 
 KEY_PATH=/mnt/data/source/id_rsa
-SSH_FILE=/mnt/data/source/ssh
+#SSH_FILE=/mnt/data/source/ssh
