install fetch-crl

--- a/fedcloud_ui/Dockerfile
+++ b/fedcloud_ui/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER S. Koulouzis
 
 RUN apt-get update -y
 RUN apt-get upgrade -y 
-RUN apt-get install -y openssh-client curl 
+RUN apt-get install -y openssh-client curl fetch-crl
 
 RUN  curl -L http://go.egi.eu/fedcloud.ui | /bin/bash -
 RUN fetch-crl --httptimeout 3 --verbose 
