--- a/storm/docker-compose.yml
+++ b/storm/docker-compose.yml
@@ -3,15 +3,16 @@ version: '3.1'
 services:
   zookeeper:
     image: zookeeper
-    #deploy:
-        #restart_policy:
-            #condition: on-failure 
+    deploy:
+        restart_policy:
+            condition: on-failure 
 
   nimbus:
     image: storm
     command: bash -c "sed -ie \"s/^# storm.zookeeper.servers:/ storm.zookeeper.servers:/\" /apache-storm-1.2.1/conf/storm.yaml && sed -ie \"s/^#     - \\\"server1\\\"/     - \\\"zookeeper\\\"/\" /apache-storm-1.2.1/conf/storm.yaml && sed -ie \"s/^# nimbus.seeds:\ \[\\\"host1\\\", \\\"host2\\\", \\\"host3\\\"\]/ nimbus.seeds:\ \[\\\"nimbus\\\"\]/\" /apache-storm-1.2.1/conf/storm.yaml && cat /apache-storm-1.2.1/conf/storm.yaml && storm nimbus"
     environment:
         ZOOKEEPR_HOST: zookeeper
+        STORM_TOPOLOGY_URL: 
     depends_on:
       - zookeeper
     ports:
@@ -27,9 +28,9 @@ services:
     environment:
         ZOOKEEPR_HOST: zookeeper  
         NIMBUS_HOST: nimbus
-    #deploy:
-        #restart_policy:
-            #condition: on-failure
+    deploy:
+        restart_policy:
+            condition: on-failure
             
             
   ui:
@@ -39,8 +40,8 @@ services:
       - nimbus
       - zookeeper
       - supervisor
-    #deploy:
-        #restart_policy:
-            #condition: on-failure    
+    deploy:
+        restart_policy:
+            condition: on-failure    
     ports:
       - 8080:8080
