--- a/storm/docker-compose.yml
+++ b/storm/docker-compose.yml
@@ -8,11 +8,13 @@ services:
             condition: on-failure 
 
   nimbus:
-    image: storm
-    command: bash -c "sed -ie \"s/^# storm.zookeeper.servers:/ storm.zookeeper.servers:/\" /apache-storm-1.2.1/conf/storm.yaml && sed -ie \"s/^#     - \\\"server1\\\"/     - \\\"zookeeper\\\"/\" /apache-storm-1.2.1/conf/storm.yaml && sed -ie \"s/^# nimbus.seeds:\ \[\\\"host1\\\", \\\"host2\\\", \\\"host3\\\"\]/ nimbus.seeds:\ \[\\\"nimbus\\\"\]/\" /apache-storm-1.2.1/conf/storm.yaml && cat /apache-storm-1.2.1/conf/storm.yaml && storm nimbus"
+    image: alogo53/docker-storm
+    #command: storm nimbus
     environment:
-        ZOOKEEPR_HOST: zookeeper
-        STORM_TOPOLOGY_URL: 
+        TOPOLOGY_URL: https://github.com/skoulouzis/lightning/releases/download/v0.1-beta/lightning-0.0.1-SNAPSHOT-jar-with-dependencies.jar
+        TOPOLOGY_NAME: lightning
+        TOPOLOGY_MAIN: de.pangaea.lightning.ENVRI_NRTQualityCheck
+        TOPOLOGY_ARGS: arg1 arg2
     depends_on:
       - zookeeper
     ports:
@@ -21,13 +23,10 @@ services:
 #worker 
   supervisor:
     image: storm
-    command: bash -c "sed -ie \"s/^# storm.zookeeper.servers:/ storm.zookeeper.servers:/\" /apache-storm-1.2.1/conf/storm.yaml && sed -ie \"s/^#     - \\\"server1\\\"/     - \\\"zookeeper\\\"/\" /apache-storm-1.2.1/conf/storm.yaml && sed -ie \"s/^# nimbus.seeds:\ \[\\\"host1\\\", \\\"host2\\\", \\\"host3\\\"\]/ nimbus.seeds:\ \[\\\"nimbus\\\"\]/\" /apache-storm-1.2.1/conf/storm.yaml && cat /apache-storm-1.2.1/conf/storm.yaml && storm supervisor"
+    command: storm supervisor
     depends_on:
       - nimbus
       - zookeeper
-    environment:
-        ZOOKEEPR_HOST: zookeeper  
-        NIMBUS_HOST: nimbus
     deploy:
         restart_policy:
             condition: on-failure
@@ -35,7 +34,7 @@ services:
             
   ui:
     image: storm
-    command: bash -c "sed -ie \"s/^# storm.zookeeper.servers:/ storm.zookeeper.servers:/\" /apache-storm-1.2.1/conf/storm.yaml && sed -ie \"s/^#     - \\\"server1\\\"/     - \\\"zookeeper\\\"/\" /apache-storm-1.2.1/conf/storm.yaml && sed -ie \"s/^# nimbus.seeds:\ \[\\\"host1\\\", \\\"host2\\\", \\\"host3\\\"\]/ nimbus.seeds:\ \[\\\"nimbus\\\"\]/\" /apache-storm-1.2.1/conf/storm.yaml && cat /apache-storm-1.2.1/conf/storm.yaml &&  storm ui"
+    command: storm ui
     depends_on:
       - nimbus
       - zookeeper
@@ -45,3 +44,78 @@ services:
             condition: on-failure    
     ports:
       - 8080:8080
+      
+            
+  influx:
+    image: influxdb
+    volumes:
+      - influx:/var/lib/influxdb
+    deploy:
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
+      resources:
+        limits:
+          cpus: "0.10"
+          memory: "128M"
+        reservations:
+          cpus: "0.05"
+          memory: "64M"
+    networks:
+      - monitoring          
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - 0.0.0.0:3000:3000
+    volumes:
+      - grafana:/var/lib/grafana
+    depends_on:
+      - influx
+    deploy:
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
+      resources:
+        limits:
+          cpus: "0.10"
+          memory: "128M"
+        reservations:
+          cpus: "0.05"
+          memory: "64M"
+    networks:
+      - monitoring               
+
+  cadvisor:
+    image: google/cadvisor
+    hostname: '{{.Node.ID}}'
+    command: -logtostderr -docker_only -storage_driver=influxdb -storage_driver_db=cadvisor -storage_driver_host=influx:8086
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+    depends_on:
+      - influx
+    deploy:
+      mode: global
+      resources:
+        limits:
+          cpus: "0.10"
+          memory: "128M"
+        reservations:
+          cpus: "0.05"
+          memory: "64M"
+    networks:
+      - monitoring          
+
+volumes:
+  influx:
+    driver: local
+  grafana:
+    driver: local
+    
+networks:
+  monitoring:            
